test/should_pass/annot_004.grg
rule r {
	pattern {
		-[prio=10000] : Edge->;
	}
	modify {
	}
}

