test/should_fail/annot_007.grg
actions annot_007;

rule r {
	pattern {
		:[prio=42];
	}
	modify {}
}
